<resources>

    <string name="app_name">Rogue BTS Detector</string>
    <string name="menu_settings">Settings</string>
    <string name="bts_service_started">RogueBtsDetector service started.</string>
    <string name="bts_service_stopped">RogueBtsDetector Service stopped.</string>
    <string name="bts_service_disconnected">RogueBtsDetector Service disconnected.</string>
    <string name="bts_service_connected">RogueBtsDetector Service connected.</string>
    <string name="title_activity_rogue_bts_detector">RogueBtsDetector</string>
    <string name="open_cell_id_url">http://www.opencellid.org/cell/</string>
    <string name="google_location_url">http://www.google.com/glm/mmap</string>
    <string name="open_b_map_location_url">http://www.openbmap.org/api/getGPSfromGSM.php</string>
    <string name="test">TEST</string>
    <string name="test1">TEST1</string>
    <string name="test2">TEST2</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_preference">Preferences</string>
    <string name="title_activity_bts__score">BTS Score</string>
    <string name="bts_score_title">BTS Score</string>
    <string name="bts_metric">Metric</string>
    <string name="bts_score">Score</string>
    <string name="metric_id">Cell Tower ID</string>
    <string name="metric_location">Cell Tower Location</string>
    <string name="metric_time">Times Observed</string>
    <string name="metric_service">Service Type</string>
    <string name="metric_default">-</string>
    <string name="bts_rating">BTS Rating</string>
    <string name="total_score">Total Score</string>
    <string name="calculate_score">Calculate Score</string>
    <string name="title_activity_about">About</string>
    <string name="enable_bts_detection">Enable Rogue BTS Detection</string>
    <string name="check_interval">Check Interval (Seconds)</string>
    <string name="apply">Apply</string>
    <string name="map">Map</string>
    <string name="preference_label">Preferences</string>
    <string name="default_check_interval">60</string>
    <string name="developed">Developers</string>
    <string name="raul">Raul Gonzalez</string>
    <string name="jenna">Jenna Kallaher</string>
    <string name="bill">Bill Wysocki</string>
    <string name="steve">Steve Morley</string>
    <string name="title_activity_bts_map">BtsMap</string>

</resources>