<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bts_score_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="20dp"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bts_metric"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bts_score"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/metric_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_location" />

            <TextView
                android:id="@+id/metric_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_default" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/metric_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_service" />

            <TextView
                android:id="@+id/metric_service_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_default" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/metric_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_time" />

            <TextView
                android:id="@+id/metric_time_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_default" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/metric_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_id" />

            <TextView
                android:id="@+id/metric_id_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_default" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_below="@+id/tableLayout1"
        android:layout_marginTop="97dp"
        android:text="@string/total_score"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="24dp"
        android:text="@string/bts_rating"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/metric_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/metric_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/calculate_score" />

</RelativeLayout>